--- a/style.css
+++ b/style.css
@@ -74,3 +74,7 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #0056b3; /* Darker blue on hover */
 }
+
+.sr-only-svg {
+    position: absolute;
+}
